platform/alertmanager/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: platform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.lvs.me.uk`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: alertmanager-tls
